--- a/r_db_tut.qmd
+++ b/r_db_tut.qmd
@@ -6,10 +6,10 @@ editor: visual
 
 ## Connecting to the Database
 
-#### Packages 
+#### Packages
 
 ```{r}
-#| output: false
+
 library(RPostgres)  # The database driver
 library(DBI)        # Functions needed to interact with the database
 library(rstudioapi) # Package that asked for credentials 
@@ -31,7 +31,7 @@ librarian::shelf(RPostgres, DBI, rstudioapi)
 Connecting
 
 ```{r}
-# connecting to RIBBiTR Database
+# connecting to RIBBiTR Database - Renviron file
 ribbitr_connection <- dbConnect(drv = dbDriver("Postgres"),
                                 dbname = "RIBBiTR",
                                 host = "localhost",
@@ -39,6 +39,14 @@ ribbitr_connection <- dbConnect(drv = dbDriver("Postgres"),
                                 user = Sys.getenv("user"),
                                 password = Sys.getenv("password"))
 
+
+# connecting to RIBBiTR Database - rstudioapi
+ribbitr_connection <- dbConnect(drv = dbDriver("Postgres"),
+                                dbname = "RIBBiTR",
+                                host = "localhost",
+                                port = "5432",
+                                user = askForPassword("user"),
+                                password = askForPassword("password"))
    
               
 # Same method for connecting to RIBBiTR databse but will give feedback, I recommend copying this
@@ -67,7 +75,7 @@ dbSendQuery(conn = ribbitr_connection,
             statement = "set search_path = 'survey_data';")
 ```
 
-#### Interacting 
+#### Interacting
 
 ```{r}
 
@@ -118,7 +126,7 @@ large_pan_frogs <- dbGetQuery(conn = ribbitr_connection,
 
 ```
 
-#### Reproducible Workflow 
+#### Reproducible Workflow
 
 ```{r}
 # packages
